# ts6-stream-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.host.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  entrypoint.sh  nginx.conf
docker/pulse/: default.pa
frontend/: index.html
scripts/: dev.sh  shell.sh
src/ts6_stream_bot/: __init__.py  __main__.py  config.py  logging_setup.py  metrics.py
src/ts6_stream_bot/api/: __init__.py  app.py  auth.py  routes.py  schemas.py
src/ts6_stream_bot/pipeline/: __init__.py  audio.py  audio_capture.py  browser.py  capture.py  controller.py  parec_audio_track.py  stream_publisher.py  stream_signaling.py  video_broadcaster.py  video_capture.py
src/ts6_stream_bot/sources/: __init__.py  base.py  browser_url.py  direct_file.py  twitch.py  youtube.py
src/ts6_stream_bot/sources/_operator_implemented/: .gitkeep  README.md  __init__.py  _template.py
src/ts6_stream_bot/ts3lib/: __init__.py  client.py  commands.py  crypto.py  identity.py  identity_store.py  license.py  quicklz.py
src/ts6_stream_bot/utils/: paths.py  proc.py
tests/: conftest.py  test_api.py  test_audio_capture.py  test_client.py  test_commands.py  test_crypto.py  test_identity.py  test_identity_store.py  test_license.py  test_parec_audio_track.py  test_paths.py  test_proc.py  test_quicklz.py  test_sdp_filter.py  test_settings.py  test_sources.py  test_stream_publisher.py  test_stream_signaling.py  test_video_broadcaster.py
tests/fixtures/: commands_vectors.json  crypto_vectors.json  identity_vectors.json  license_vectors.json  quicklz_vectors.json
tests/integration/: conftest.py  test_smoke.py
