[project]
name = "ts6-stream-bot"
version = "0.1.0"
description = "Self-hosted watch-together backend for TeamSpeak 6 communities"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "playwright>=1.48.0",
    "structlog>=24.4.0",
    "yt-dlp>=2024.10.0",
    "httpx>=0.27.0",
    "anyio>=4.6.0",
    "prometheus-client>=0.21.0",
    "cryptography>=43.0.0",
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[project.scripts]
ts6-stream-bot = "ts6_stream_bot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ts6_stream_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle / pyflakes
    "I",                  # isort
    "B",                  # bugbear
    "UP",                 # pyupgrade
    "SIM",                # simplify
    "RUF",                # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src/ts6_stream_bot"]

# Tests stay non-strict: pytest fixtures don't play well with strict typing
# (the fixture/parametrize indirection produces lots of false positives) and
# the value of strict-typing assertions in tests is low.
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Playwright / yt-dlp ship without complete type stubs.
[[tool.mypy.overrides]]
module = ["playwright.*", "yt_dlp.*"]
ignore_missing_imports = true
follow_imports = "skip"
